# velr-rust-examples

./: .gitignore  Cargo.toml  README.md
examples/: arrow_chunked.rs  arrow_ipc.rs  basic_open.rs  basic_query.rs  batch_import.rs  cypher_aggregates.rs  cypher_labels_and_properties.rs  cypher_match.rs  cypher_merge.rs  cypher_merge_relationships.rs  cypher_paths.rs  cypher_relationships.rs  cypher_unwind.rs  cypher_var_length_paths.rs  cypher_where.rs  cypher_with.rs  cypher_with_aggregates.rs  explain.rs  file_backed.rs  fulltext_search.rs  query_parameters.rs  rollback.rs  rollback_on_drop.rs  savepoints.rs  streaming_tables.rs  transaction.rs  usecase_access_control.rs  usecase_fraud_detection.rs  usecase_knowledge_graph.rs  usecase_org_chart.rs  usecase_ticket_dependencies.rs  vector_embeddings_fastembed.rs
src/: bacth_import.rs  main.rs
